--- a/mkdocs/themes/readthedocs/base.html
+++ b/mkdocs/themes/readthedocs/base.html
@@ -13,10 +13,9 @@
 
   {% if favicon %}<link rel="shortcut icon" href="{{ favicon }}">
   {% else %}<link rel="shortcut icon" href="{{ base_url }}/img/favicon.ico">{% endif %}
-
+  <script src="{{ base_url }}/js/jquery-2.1.1.min.js"></script>
   {# CSS #}
   <link rel="stylesheet" href="{{ base_url }}/css/theme.css" type="text/css" />
-  <link rel="stylesheet" href="{{ base_url }}/css/theme_extra.css" type="text/css" />
   <link rel="stylesheet" href="{{ base_url }}/css/highlight.css">
   <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.js"></script>
   <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.css" rel="stylesheet">
@@ -24,7 +23,7 @@
   {%- for path in extra_css %}
   <link href="{{ path }}" rel="stylesheet">
   {%- endfor %}
-
+  <link rel="stylesheet" href="{{ base_url }}/css/theme_extra.css" type="text/css" />
   {% if current_page %}
   <script>
     // Current page data
@@ -33,7 +32,7 @@
     var mkdocs_page_url = "{{ current_page.abs_url }}";
   </script>
   {% endif %}
-  <script src="{{ base_url }}/js/jquery-2.1.1.min.js"></script>
+  
   <script src="{{ base_url }}/js/modernizr-2.8.3.min.js"></script>
   <script type="text/javascript" src="{{ base_url }}/js/highlight.pack.js"></script>
   <script src="{{ base_url }}/js/jpush.js"></script>
@@ -42,7 +41,7 @@
 </head>
 
 <body class="wy-body-for-nav" role="document">
-
+<div class="container">
   <div class="wy-grid-for-nav">
 
     {# SIDE NAV, TOGGLES ON MOBILE #}
@@ -92,7 +91,7 @@
   </div>
 
 {% include "versions.html" %}
-
+</div>
 </body>
 </html>
 {% if current_page and current_page.is_homepage %}
