--- a/mkdocs/themes/readthedocs/toc.html
+++ b/mkdocs/themes/readthedocs/toc.html
@@ -1,7 +1,6 @@
 {% if nav_item.children %}
     <ul class="subnav">
-    <li><span>{{ nav_item.title }}</span></li>
-
+    <li class="subnavli"><span><a href="#">{{ nav_item.title }}</a></span></li>
         {% for nav_item in nav_item.children %}
             {% include 'toc.html' %}
         {% endfor %}
