--- a/mkdocs/themes/readthedocs/base.html
+++ b/mkdocs/themes/readthedocs/base.html
@@ -32,9 +32,11 @@
     var mkdocs_page_url = "{{ current_page.abs_url }}";
   </script>
   {% endif %}
-  
+  <!--
   <script src="{{ base_url }}/js/modernizr-2.8.3.min.js"></script>
+  
   <script type="text/javascript" src="{{ base_url }}/js/highlight.pack.js"></script>
+  -->
   <script src="{{ base_url }}/js/jpush.js"></script>
   {%- block extrahead %} {% endblock %}
 </head>
@@ -46,14 +48,28 @@
     {# SIDE NAV, TOGGLES ON MOBILE #}
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
       <div class="wy-side-nav-search">
-        <a href="{{ homepage_url }}" class="icon icon-home"> {{ site_name }}</a>
-        {% include "searchbox.html" %}
+      <div id="home-url">
+        <a href="http://192.168.4.138/"> {{ site_name }}</a>
+      </div>
+         {% include "searchbox.html" %}
       </div>
 
       <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
-        <ul class="current">
+        <ul class="nav current">
           {% for nav_item in nav %}
-            <li>{% include "toc.html" %}<li>
+          <li class="subnav">
+          {% if nav_item.children %}
+          <ul class="subnavul">
+          <li class="subnavli"><span><a href="{{ nav_item.children[0].url}}">{{ nav_item.title }}</a></span></li>
+          {% for nav_item in nav_item.children %}
+          {% include 'toc.html' %}
+          {% endfor %}
+          {% else %}
+          <ul class="subnavul">
+          <li class="subnavli_single"><span><a href="{{ nav_item.url }}">{{ nav_item.title }}</a></span></li>
+          {% endif %}
+          </ul>
+          <li>
           {% endfor %}
         </ul>
       </div>
@@ -70,6 +86,15 @@
 
       {# PAGE CONTENT #}
       <div class="wy-nav-content">
+        <div class="header">
+          <div id="nav-top">
+          <ul class="nav nav-tabs">
+          <li role="presentation"><a href="/jpush/">JPush</a></li>
+          <li role="presentation"><a href="/jmessage/">JMessage</a></li>
+          </ul>
+          </div>
+         
+        </div>
         <div class="rst-content">
           {% include "breadcrumbs.html" %}
           <div role="main">
